--- a/css/styles.css
+++ b/css/styles.css
@@ -496,6 +496,49 @@ img {
 .footer-icon {
   fill: #f4f4fd;
 }
+
+.footer-subcribe-container {
+  margin-left: auto;
+}
+.footer-form {
+}
+.footer-form-input {
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: #2e2f42;
+}
+
+.footer-form-input:focus {
+ border: #31d0aa;
+
+.footer-form-input::placeholder {
+  font: 400 12px / 2 'Roboto', sans-serif;
+  letter-spacing: 0.04em;
+  color: #fff;
+  padding-left: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.subscribe-btn {
+  font: 500 16px / 1.5 'Roboto', sans-serif;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
+  border-radius: 4px;
+  padding: 8px 64px 8px 24px;
+  width: 165px;
+  height: 40px;
+  background: #4d5ae5;
+  margin-left: 24px;
+}
+.subscribe-icon {
+  fill: #fff;
+  margin-left: 16px;
+}
 /* #endregion footer */
 
 /* #region backdrop */
