--- a/css/styles.css
+++ b/css/styles.css
@@ -500,6 +500,11 @@ img {
 .footer-subcribe-container {
   margin-left: auto;
 }
+
+.subscribe-form {
+  display: flex;
+  gap: 24px;
+}
 .footer-form {
 }
 .footer-form-input {
