--- a/css/styles.css
+++ b/css/styles.css
@@ -538,7 +538,7 @@ img {
   justify-content: center;
   align-items: center;
   text-align: center;
-  color: #fff;
+  color: #ffffff;
   border-radius: 4px;
   padding: 8px 64px 8px 24px;
   width: 165px;
