--- a/css/styles.css
+++ b/css/styles.css
@@ -701,6 +701,7 @@ img {
   height: 120px;
   padding: 8px 16px;
   resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .user-comment::placeholder {
@@ -737,7 +738,7 @@ img {
 .checkbox:checked + .label-checkbox .custom-checkbox {
   fill: #f4f4fd;
   background-color: #404bbf;
-  border: 1px solid #404bbf;
+  border: none;
 }
 
 .label-checkbox {
